--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev:init": "convex dev --once"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.0.6",
-    "convex": "^0.13.0",
-    "hono": "^3.0.3",
+    "@hono/zod-validator": "^0.1.3",
+    "convex": "^0.19.0",
+    "hono": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "strip-ansi": "^7.0.1",
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/babel__core": "^7.20.0",
     "@types/node": "^18.14.6",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^1.3.1",
     "npm-run-all": "^4.1.5",
     "vite": "^2.3.8"
