--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "http",
   "version": "0.0.0",
   "scripts": {
-    "dev": "npm-run-all init dev:init --parallel dev:server dev:client",
+    "dev": "npm-run-all init dev:init --parallel dev:frontend dev:backend",
     "build": "vite build",
     "init": "convex init",
-    "dev:server": "convex dev",
-    "dev:client": "vite --open --clearScreen false",
+    "dev:backend": "convex dev",
+    "dev:frontend": "vite --open --clearScreen false",
     "dev:init": "convex dev --once"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.3",
-    "convex": "^0.19.0",
+    "convex": "^1.0.2",
     "hono": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
