--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.3",
-    "convex": "^0.19.0",
+    "convex": "^1.0.2",
     "hono": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "strip-ansi": "^7.0.1",
     "typescript": "^4.9.5",
+    "vite": "^4.1.4",
     "zod": "^3.21.0"
   },
   "devDependencies": {
